--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
   <a-scene mindar-face embedded vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     <a-camera active="false" position="0 0 0"></a-camera>
     <a-entity mindar-face-target="anchorIndex: 1">
-      <a-image
-        src="https://static.wixstatic.com/media/80c3b4_b75dffc38d5c47cdaa7d1ac115168adf~mv2.png/v1/fill/w_57,h_57,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/80c3b4_b75dffc38d5c47cdaa7d1ac115168adf~mv2.png"
-        position="0 0 0" width="0.5" height="0.5"></a-image>
-      <!-- <a-sphere color="green" radius="0.1"></a-sphere> -->
+      <a-sphereF color="green" radius="0.1"></a-sphereF>
     </a-entity>
   </a-scene>
 </body>
